--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -24,7 +25,8 @@
     <section id="hero">
         <div class="hero-content">
             <h1 data-aos="fade-up">Welcome to SMKDEV</h1>
-            <p data-aos="fade-up" data-aos-delay="200">Your Partner in Education and Career Development</p>
+            <h1 data-aos="fade-up">Jadilah Talenta Digital<span></span></h1>
+            <!-- <p data-aos="fade-up" data-aos-delay="200">Your Partner in Education and Career Development</p> -->
         </div>
     </section>
 
@@ -131,7 +133,7 @@
 
     <section id="contact">
         <h2 data-aos="fade-right">Contact Us</h2>
-        <form data-aos="fade-right" data-aos-delay="200">
+        <form class="contact-form" data-aos="fade-right" data-aos-delay="200">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
@@ -141,7 +143,20 @@
             <button type="submit">Send</button>
         </form>
     </section>
-
+    <section id="footer">
+        <div class="footer-content">
+            <p>SMKDEV</p>
+            <p>Creating High-Caliber Digital Talent</p>
+            <p>Jalan Rancabolang 1, Margacinta Buah Batu, Kota Bandung, Jawa Barat 40295</p>
+            <div class="social-media-links">
+                <a href="https://youtube.com" target="_blank"><img src="https://www.smk.dev/static/media/youtube-icon.svg" alt="YouTube"></a>
+                <a href="https://linkedin.com" target="_blank"><img src="https://www.smk.dev/static/media/linkedin-icon.svg" alt="LinkedIn"></a>
+                <a href="https://instagram.com" target="_blank"><img src="https://www.smk.dev/static/media/instagram-icon.svg" alt="Instagram"></a>
+                <a href="https://facebook.com" target="_blank"><img src="https://www.smk.dev/static/media/facebook-icon.svg" alt="Facebook"></a>
+                <a href="https://twitter.com" target="_blank"><img src="https://www.smk.dev/static/media/twitter-icon.svg" alt="Twitter"></a>
+            </div>
+        </div>
+    </section>
     <footer>
         <p>&copy; 2024 SMKDEV. All rights reserved.</p>
     </footer>
