--- a/index.html
+++ b/index.html
@@ -62,8 +62,46 @@
             </div>
         </div>
     </section>
-
     <section id="expert-mentor">
+        <h2 data-aos="fade-up">Expert Mentor</h2>
+        <div class="mentor-slider">
+            <div class="mentor-slide">
+                <img src="https://smkdev.storage.googleapis.com/wp/sudaryatno-fe5603-fe6f61-300x300.jpeg" alt="Mentor 1">
+                <p>Sudaryatno</p>
+                <hr>
+                <p>CTO Gits Indonesia</p>
+            </div>
+            <div class="mentor-slide">
+                <img src="https://smkdev.storage.googleapis.com/wp/ibnu-sina-wardy-86f446-870bf6-a31bbc-a34c39-300x300.jpg" alt="Mentor 2">
+                <p>Ibnu Sina Wardy</p>
+                <hr>
+                <p>CEO Gits Indonesia</p>
+
+            </div>
+            <div class="mentor-slide">
+                <img src="https://smkdev.storage.googleapis.com/wp/Rachmawati-Ari-Taurisia.jpg" alt="Mentor 3">
+                <p>Rachmawati Ari Taurisia</p>
+                <hr>
+                <p>Curriculum Developer SMKDEV</p>
+
+            </div>
+            <div class="mentor-slide">
+                <img src="https://smkdev.storage.googleapis.com/wp/Samuel-Pandohan-Terampil-Gultom.jpg" alt="Mentor 4">
+                <p>Samuel Pandohan Terampil Gultom</p>
+                <hr>
+                <p>Curriculum Developer SMKDEV</p>
+
+            </div>
+            <div class="mentor-slide">
+                <img src="https://smkdev.storage.googleapis.com/wp/image-4ecbfe-4eee03-300x300.png" alt="Mentor 5">
+                <p>Helmi Adi Prasetyo</p>
+                <hr>
+                <p>Backend Developer</p>
+            </div>
+            <!-- Repeat for other mentors -->
+        </div>
+    </section>
+    <!-- <section id="expert-mentor">
         <h2 data-aos="fade-up">Expert Mentor</h2>
         <div class="scroll">
             <div class="m-scroll">
@@ -76,7 +114,7 @@
                 <span class="blank"></span>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="talenta-digital" data-aos="fade-up">
         <h2>Talenta Digital SMKDEV</h2>
